fixed handling of Instant.